--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,120 +1,97 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
-        <meta charset="utf-8">
-        <meta name="theme-color" content="#ffffff">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% block head_meta %}
-            <meta name="robots" content="noindex, follow">
-        {% endblock %}
-        <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css" />
-        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-        <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}{{ page.title }}{% endblock %} &mdash; {{ site.title }} &mdash; {{ site.subtitle }}</title>
+  <meta name="theme-color" content="#ffffff">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% block head_meta %}
+  <meta name="robots" content="noindex, follow">
+  {% endblock %}
+  <link href="{{ site.url }}/assets/stylesheets/styles.css" rel="stylesheet">
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-        <link rel="apple-touch-startup-image" href="{{ site.url }}/images/jackson/2048x2048.png">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="shortcut icon" sizes="76x76" href="{{ site.url }}/images/jackson/76x76.png">
-        <link rel="shortcut icon" sizes="120x120" href="{{ site.url }}/images/jackson/120x120.png">
-        <link rel="shortcut icon" sizes="128x128" href="{{ site.url }}/images/jackson/128x128.png">
-        <link rel="shortcut icon" sizes="152x152" href="{{ site.url }}/images/jackson/152x152.png">
-        <link rel="shortcut icon" sizes="196x196" href="{{ site.url }}/images/jackson/196x196.png">
-        <link rel="shortcut icon" sizes="512x512" href="{{ site.url }}/images/jackson/512x512.png">
-        <link rel="shortcut icon" sizes="1024x1024" href="{{ site.url }}/images/jackson/1024x1024.png">
-        <link rel="shortcut icon" sizes="2048x2048" href="{{ site.url }}/images/jackson/2048x2048.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="{{ site.url }}/images/jackson/76x76.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="{{ site.url }}/images/jackson/120x120.png">
-        <link rel="apple-touch-icon" sizes="128x128" href="{{ site.url }}/images/jackson/128x128.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="{{ site.url }}/images/jackson/152x152.png">
-        <link rel="apple-touch-icon" sizes="196x196" href="{{ site.url }}/images/jackson/196x196.png">
-        <link rel="apple-touch-icon" sizes="512x512" href="{{ site.url }}/images/jackson/512x512.png">
-        <link rel="apple-touch-icon" sizes="1024x1024" href="{{ site.url }}/images/jackson/1024x1024.png">
-        <link rel="apple-touch-icon" sizes="2048x2048" href="{{ site.url }}/images/jackson/2048x2048.png">
+  <link rel="apple-touch-startup-image" href="{{ site.url }}/images/jackson/2048x2048.png">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="shortcut icon" sizes="76x76" href="{{ site.url }}/images/jackson/76x76.png">
+  <link rel="shortcut icon" sizes="120x120" href="{{ site.url }}/images/jackson/120x120.png">
+  <link rel="shortcut icon" sizes="128x128" href="{{ site.url }}/images/jackson/128x128.png">
+  <link rel="shortcut icon" sizes="152x152" href="{{ site.url }}/images/jackson/152x152.png">
+  <link rel="shortcut icon" sizes="196x196" href="{{ site.url }}/images/jackson/196x196.png">
+  <link rel="shortcut icon" sizes="512x512" href="{{ site.url }}/images/jackson/512x512.png">
+  <link rel="shortcut icon" sizes="1024x1024" href="{{ site.url }}/images/jackson/1024x1024.png">
+  <link rel="shortcut icon" sizes="2048x2048" href="{{ site.url }}/images/jackson/2048x2048.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.url }}/images/jackson/76x76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.url }}/images/jackson/120x120.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="{{ site.url }}/images/jackson/128x128.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.url }}/images/jackson/152x152.png">
+  <link rel="apple-touch-icon" sizes="196x196" href="{{ site.url }}/images/jackson/196x196.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="{{ site.url }}/images/jackson/512x512.png">
+  <link rel="apple-touch-icon" sizes="1024x1024" href="{{ site.url }}/images/jackson/1024x1024.png">
+  <link rel="apple-touch-icon" sizes="2048x2048" href="{{ site.url }}/images/jackson/2048x2048.png">
 
-        <link rel="stylesheet" href="{{ site.url }}/components/highlightjs/styles/github.css" />
-        <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed" />
-        <style>
-        /** quick fix because bootstrap <pre> has a background-color. */
-        pre code { background-color: inherit; }
-        </style>
-        {% block head_styles %}
-        {% endblock %}
-        {% block head_scripts %}
-        {% endblock %}
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="{{ site.url }}/">{{ site.title }}</a>
-                    </div>
-                    <div id="navbar" class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a href="{{ site.url }}/blog">Posts Archive</a></li>
-                            <li><a href="{{ site.url }}/blog/categories">Categories</a></li>
-                            <li><a href="{{ site.url }}/blog/tags">Tags</a></li>
-                            <li><a href="{{ site.url }}/about">About</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-        <div class="mainContent container">
-            <div class="row-fluid">
-                <div class="span8">
-                    {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
-                </div>
-                <div class="span4 sidebar">
-                    <div class="well">
-                        <h4>{{ site.title }}{% if site.subtitle %} <small>{{ site.subtitle }}</small>{% endif %}</h4>
-                    </div>
-                    <div class="well sidebar-nav">
-                        <h4>Links</h4>
-                        <ul class="nav">
-                            <li><a href="http://sculpin.io">sculpin.io</a></li>
-                            <li><a href="http://twitter.com/getsculpin">@getsculpin</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer class="container">
-            &copy; {{ "now"|date("Y") }} {{ site.title }}
-        </footer>
+  <link rel="alternate" type="application/atom+xml" href="{{ site.url }}/atom.xml" title="{{ site.title }} activity feed">
+  {% block head_styles %}
+  {% endblock %}
+  {% block head_scripts %}
+  {% endblock %}
+</head>
+<body>
+<header>
+  <nav class="c-navbar">
+    <div class="c-navbar__inner c-container c-container--max-width">
+      <div class="c-navbar__header">
+        <a class="c-navbar__brand" href="{{ site.url }}/">{{ site.title }}</a>
+        <button class="c-navbar__button" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+        </button>
+      </div><!-- /.c-navbar__header -->
+      <div class="c-navbar__navigation">
+        <ul class="c-navbar__navigation-list">
+          <li class="c-navbar__navigation-list-item"><a href="{{ site.url }}/#!" class="c-navbar__navigation-link">Home</a></li>
+          <li class="c-navbar__navigation-list-item"><a href="{{ site.url }}/#!" class="c-navbar__navigation-link">Services</a></li>
+          <li class="c-navbar__navigation-list-item"><a href="{{ site.url }}/#!" class="c-navbar__navigation-link">Works</a></li>
+          <li class="c-navbar__navigation-list-item"><a href="{{ site.url }}/#!" class="c-navbar__navigation-link">About us</a></li>
+          <li class="c-navbar__navigation-list-item"><a href="{{ site.url }}/#!" class="c-navbar__navigation-link">Contact</a></li>
+        </ul>
+      </div><!-- /.c-navbar__navigation -->
+    </div><!-- /.c-container -->
+  </nav><!-- /.c-navbar -->
+</header>
+<main class="c-container">
+  {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
+</main><!-- /.c-container -->
+<footer class="container">
+  Copyright &copy; {{ "now"|date("Y") }} {{ site.title }}
+</footer>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ site.url }}/components/jquery/jquery.min.js"><\/script>')</script>
-        <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
-        {% block scripts %}
-        {% endblock %}
+{% block scripts %}
+{% endblock %}
 
-        {% if site.google_analytics_tracking_id %}
+{% if site.google_analytics_tracking_id %}
+<script type="text/javascript">
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
+  ga('send', 'pageview');
+</script>
+{% endif %}
 
-            ga('create', '{{site.google_analytics_tracking_id}}', 'auto');
-            ga('send', 'pageview');
-        </script>
-        {% endif %}
-        <script src="{{ site.url }}/components/highlightjs/highlight.pack.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
-
-        {% block scripts_after %}
-        {% endblock %}
-    </body>
+{% block scripts_after %}
+{% endblock %}
+</body>
 </html>
