--- a/source/_dev/assets/sass/utilities/flex/_flex-wrap.scss
+++ b/source/_dev/assets/sass/utilities/flex/_flex-wrap.scss
@@ -1,18 +1,9 @@
-// flex-wrap:
-//   nowrap
-//   wrap
-//   wrap-reverse
-
-$__u-flex-prefix: '.u-flex';
-$__u-flex-property-name: 'flex-wrap';
-$__u-flex-property-values: (
-  'nowrap',
-  'wrap',
-  'wrap-reverse'
-);
-
 @include generate-utility-class((
-  selector_prefix: #{$__u-flex-prefix},
-  property_name:   $__u-flex-property-name,
-  property_values: $__u-flex-property-values
+  selector_prefix: '.u-flex',
+  property_name: 'flex-wrap',
+  property_values: (
+    'nowrap',
+    'wrap',
+    'wrap-reverse'
+  )
 ));
