--- a/source/_dev/assets/sass/components/_c-container.scss
+++ b/source/_dev/assets/sass/components/_c-container.scss
@@ -1,15 +1,17 @@
 // Local variables.
-$c-container__max-width: 1200px;
+$c-container__max-width: 90%;
+$c-container__max-width--xl: 1200px;
 
 .c-container {
   margin: {
     left: auto;
     right: auto;
   }
+  max-width: $c-container__max-width;
 }
 
 @media #{$breakpoint-xxl} {
   .c-container--max-width {
-    max-width: $c-container__max-width;
+    max-width: $c-container__max-width--xl;
   }
 }
