--- a/source/_dev/assets/sass/utilities/flex/_display.scss
+++ b/source/_dev/assets/sass/utilities/flex/_display.scss
@@ -1,7 +1,23 @@
+$__u-flex-breakpoints: $breakpoints;
+
 .u-flex {
   display: flex;
 }
 
 .u-flex-inline {
   display: inline-flex;
+}
+
+@if ($GENERATE_RESPONSIVE_CLASSES) {
+  @each $__bp, $__mq in $__u-hidden-breakpoints {
+    @media #{$__mq} {
+      .u-flex\@#{$__bp} {
+        display: flex;
+      }
+
+      .u-flex-inline\@#{$__bp} {
+        display: inline-flex;
+      }
+    }
+  }
 }
